[gd_scene load_steps=4 format=3 uid="uid://dmndr0i6fmtvg"]

[ext_resource type="Texture2D" uid="uid://dgdslt2eppjp0" path="res://Pictures/选择出身.png" id="1_stlec"]
[ext_resource type="Script" uid="uid://bv1pj6tmjy1pw" path="res://scene/choose.gd" id="1_vh0bc"]

[sub_resource type="GDScript" id="GDScript_vh0bc"]
script/source = "extends AcceptDialog
"

[node name="choose" type="Node2D"]
script = ExtResource("1_vh0bc")

[node name="Node2D" type="Node2D" parent="."]

[node name="选择出身" type="Sprite2D" parent="Node2D"]
position = Vector2(642, 361)
texture = ExtResource("1_stlec")

[node name="Control" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button2" type="Button" parent="Node2D/Control"]
layout_mode = 0
offset_left = 554.0
offset_top = 463.0
offset_right = 731.0
offset_bottom = 546.0
theme_override_font_sizes/font_size = 40
text = "选择"

[node name="Button1" type="Button" parent="Node2D/Control"]
layout_mode = 0
offset_left = 153.0
offset_top = 460.0
offset_right = 334.0
offset_bottom = 547.0
theme_override_font_sizes/font_size = 40
text = "选择"

[node name="Button3" type="Button" parent="Node2D/Control"]
offset_left = 950.0
offset_top = 458.0
offset_right = 1131.0
offset_bottom = 545.0
theme_override_font_sizes/font_size = 40
text = "选择"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = ""
initial_position = 2
size = Vector2i(200, 200)
content_scale_factor = 1.32
dialog_text = "确定要选择这个吗"
script = SubResource("GDScript_vh0bc")
